# gis-challenge

./: .gitignore  .ruff.toml  README.md  losses_ui_boilerplate.js  main.py  pyproject.toml  pyrightconfig.json
src/: losses_calculator.py  main.py
